# MLOps_Course

./: .pre-commit-config.yaml  README.md  contributing.md  main.py  pyproject.toml
